# vectorfriends_neo4j_recommendations

./: README.md  main.py  pyproject.toml  requirements.txt
